--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ datastorePreferences = "1.1.1"
 coil = "2.4.0"
 smbj = "0.13.0"
 rules = "1.6.1"
+picasso = "2.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +43,7 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 coil-compose = { module = "io.coil-kt:coil-compose", name = "coil-compose", version.ref = "coil" }
 smbj = { module = "com.hierynomus:smbj", name = "smbj", version.ref = "smbj" }
 androidx-rules = { group = "androidx.test", name = "rules", version.ref = "rules" }
+picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
