--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ datastorePreferences = "1.1.1"
 coil = "2.4.0"
 smbj = "0.13.0"
 rules = "1.6.1"
-picasso = "2.8"
+paging = "3.3.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -43,7 +43,8 @@ androidx-datastore-preferences = { group = "androidx.datastore", name = "datasto
 coil-compose = { module = "io.coil-kt:coil-compose", name = "coil-compose", version.ref = "coil" }
 smbj = { module = "com.hierynomus:smbj", name = "smbj", version.ref = "smbj" }
 androidx-rules = { group = "androidx.test", name = "rules", version.ref = "rules" }
-picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
+androidx-paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
