完成了显示图片所需的数据源
未完成:尝试缓存多级目录，让用户返回时能够停留在上级目录，查看image

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
 
     <application
         android:name=".MediaApplication"
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:largeHeap="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
