--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,10 @@ coil = "2.4.0"
 smbj = "0.13.0"
 rules = "1.6.1"
 paging = "3.3.2"
+work = "2.9.1"
+coroutines-guava = "1.6.0"
+guava = "31.0.1-android"
+futures = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,6 +49,11 @@ smbj = { module = "com.hierynomus:smbj", name = "smbj", version.ref = "smbj" }
 androidx-rules = { group = "androidx.test", name = "rules", version.ref = "rules" }
 androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 androidx-paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime", version.ref = "work" }
+androidx-concurrent = { group = "androidx.concurrent", name = "concurrent-futures", version.ref = "futures" }
+kotlinx-coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version.ref = "coroutines-guava" }
+google-guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
